examples/errors/oop_field_not_found.vut
class Student() {
}

let s = Student()
out(s.name)
